Move rstcheck config into pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,4 +37,4 @@ repos:
     rev: v6.2.4
     hooks:
       - id: rstcheck
-        args: ['--config', '.rstcheck.cfg']
+        args: ['--ignore-directives=tabs,toctree,autoclass', '--report-level=warning']
