--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
-  - package_ecosystem: "github-actions"
-    directory: "/"
+  - package_ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
     groups:
       gha-dependencies:
         patterns:
-          - "*"
+          - '*'
