--- a/.github/workflows/pr-rtd-link.yml
+++ b/.github/workflows/pr-rtd-link.yml
@@ -2,23 +2,23 @@
 # interface. For users who don't know this, finding the preview link may be
 # very difficult or frustrating. This workflow makes the link more
 # findable by updating PR descriptions to include it.
-name: "Add ReadTheDocs preview link to PR description"
+name: 'Add ReadTheDocs preview link to PR description'
 
 on:
   pull_request_target:
     types:
-      - "opened"
+      - 'opened'
 
 permissions:
-  pull-requests: "write"
+  pull-requests: 'write'
 
 jobs:
   autolink-rtd-previews:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "readthedocs/actions/preview@v1"
+      - uses: 'readthedocs/actions/preview@v1'
         with:
-          project-slug: "jupytergis"
+          project-slug: 'jupytergis'
           message-template: |
             📚 Documentation preview: {docs-pr-index-url}
             💡 JupyterLite preview: {docs-pre-index-url}/lite
