Build docs and Lite deployment in ReadTheDocs (#275)
* [WIP] Attempt RTD build

* Try building for RTD in an isolated environment

* Restore docs/environment.yml, move docs dependencies to new file

* Upgrade the versions of conda and mamba in RTD build

* Use Micromamba instead of one of the out-of-the-box tool options

Creating multiple environments with mamba exposed lots of problems:

* RTD's default machinery expects a single environment YAML file when
  using conda/mamba. Injecting a 2nd environment into the normal build
  process gets confusing.
* Other hidden assumptions in the default RTD build machinery; I don't
  remember all the problems I ran in to, but getting a working build
  required an unsustainable amount of trial-and-error.
* Default-installed mamba is too old to support 'emscripten' platform,
  needs to be upgraded. When upgrading mamba, ran in to a weird issue
  where the build.html step could not find the python interpreter.

It's possible to fully override build steps, but this is an
_undocumented feature_.

See: https://github.com/readthedocs/readthedocs.org/issues/11551

Instead of overriding build steps, perhaps it will be best long-term to
override the entire build with `build.commands`.

See: https://blog.readthedocs.com/build-customization/

* Add JupyterLite badge and link to docs

* Automate exposing RTD preview link in PR description

Makes viewing PR previews more accessible!

* Make the RTD PR preview link richer

* Ignore the JupyterLite link in the link check automation

* Switch bash commands in YAML from folded to literal blocks

This feels significantly more intuitive to me.

* Format YAML

---------

Co-authored-by: Nicolas Brichet <32258950+brichet@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -242,6 +242,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
+        with:
+          ignore_links: 'lite/'
 
   build-docs-and-lite:
     name: Build docs with JupyterLite deployment
@@ -293,11 +295,6 @@ jobs:
         with:
           path: ./docs/dist
           retention-days: 30
-
-      - name: Save artifact data
-        uses: trungleduc/appsharingspace-pr-comment/.github/actions/save-artifact-link@v2
-        with:
-          artifact_link: 'https://github.com/${{ github.repository }}/actions/runs/${{github.run_id}}/artifacts/${{ steps.upload-docs-artifact.outputs.artifact_id }}'
 
   deploy:
     needs: build-docs-and-lite
