--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,9 @@ repos:
       - id: ruff
         args: ['--fix']
       - id: ruff-format
+
+  - repo: https://github.com/rstcheck/rstcheck
+    rev: v6.2.4
+    hooks:
+      - id: rstcheck
+        args: ['--ignore-directives=tabs,toctree,autoclass', '--report-level=warning']
