Account for trailing slash in {docs-pr-index-url} slug

--- a/.github/workflows/pr-rtd-link.yml
+++ b/.github/workflows/pr-rtd-link.yml
@@ -22,4 +22,4 @@ jobs:
           message-template: |
             ---
             📚 Documentation preview: {docs-pr-index-url}
-            💡 JupyterLite preview: {docs-pr-index-url}/lite
+            💡 JupyterLite preview: {docs-pr-index-url}lite
