--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -4,6 +4,6 @@ hatchling>=1.5.0,<2
 jupyterlab>=4,<5
 mercantile>=1.2
 pillow>=10
-pydantic==2.4.2
+pydantic>=2.4.2,<3
 ruff>=0.6
 xyzservices>=2024.6.0
