--- a/python/jupytergis_qgis/pyproject.toml
+++ b/python/jupytergis_qgis/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
   "jupyter_server>=2.0.1,<3",
