--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   # runtime dependencies
-  - python >=3.9,<3.10.0a0
+  - python >=3.10,<3.13
   - nodejs >=16,<17
   - yarn
 
