Add JSON to tsconfig

--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -4,5 +4,10 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": ["src/**/*", "src/schema/*.json", "src/_interface/*.json"]
+  "include": [
+    "src/**/*",
+    "src/schema/*.json",
+    "src/_interface/*.json",
+    "src/*.json"
+  ]
 }
