add jupyter react components package

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "latest",
+    "@jupyter/react-components": "^0.17.1",
     "colormap": "^2.3.2",
     "geojson-vt": "^4.0.2",
     "geotiff": "^2.1.3",
