Try fixing jupyterlite deployment

--- a/python/jupytergis_lab/package.json
+++ b/python/jupytergis_lab/package.json
@@ -121,6 +121,10 @@
       "yjs-widgets": {
         "singleton": true,
         "bundled": false
+      },
+      "@jupyter/react-components": {
+        "singleton": true,
+        "bundled": true
       }
     }
   }
