--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -38,6 +38,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "latest",
+    "@jupyter/react-components": "^0.17.1",
     "@jupyter/ydoc": "^2.0.0 || ^3.0.0",
     "@jupytergis/schema": "^0.2.1",
     "@jupyterlab/application": "^4.3.0",
@@ -61,13 +65,22 @@
     "@naisutech/react-tree": "^3.0.1",
     "@rjsf/core": "^4.2.0",
     "@rjsf/validator-ajv8": "^5.23.1",
+    "@types/colormap": "^2.3.4",
     "@types/d3-color": "^3.1.0",
+    "@types/proj4": "^2.5.5",
     "@types/three": "^0.134.0",
     "ajv": "^8.14.0",
+    "colormap": "^2.3.2",
     "d3-color": "^3.1.0",
     "gdal3.js": "^2.8.1",
+    "geojson-vt": "^4.0.2",
+    "geotiff": "^2.1.3",
+    "ol": "^10.1.0",
     "ol-pmtiles": "^0.5.0",
     "pbf": "^4.0.1",
+    "pmtiles": "^3.0.7",
+    "proj4": "^2.14.0",
+    "proj4-list": "^1.0.2",
     "react": "^18.0.1",
     "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
