--- a/python/jupytergis_lab/package.json
+++ b/python/jupytergis_lab/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@jupyter/collaborative-drive": "^3.0.0",
+    "@jupyter/react-components": "^0.17.1",
     "@jupytergis/base": "^0.2.1",
     "@jupytergis/jupytergis-core": "^0.2.1",
     "@jupytergis/schema": "^0.2.1",
