--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -262,8 +262,8 @@ jobs:
           create-args: >-
             python=3.10
             pip
-            - jupyterlite-core>=0.4.0,<0.6.0
-            - jupyterlite-xeus>=2,<3
+            jupyterlite-core>=0.4.0,<0.6.0
+            jupyterlite-xeus>=2,<3
             jupyterlite-sphinx
             sphinx
             sphinx-tabs
