--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Upload extension packages
         uses: actions/upload-artifact@v4
         with:
-          name: extension-artifacts-${{ github.job }}
+          name: extension-artifacts-${{ github.run_id }}-${{ matrix.python-version }}
           path: |
             python/jupytergis_core/dist/jupytergis*
             python/jupytergis_lab/dist/jupytergis*
