--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "jupytergis_core>=0.1.0,<1",
   "jupytergis_lab>=0.1.0,<1",
   "jupytergis_qgis>=0.1.0,<1",
+  "jupyter-collaboration>=3,<4",
 ]
 dynamic = ["version"]
 license = {file = "LICENSE"}
