--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -2,6 +2,7 @@
 datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
 jupyterlab>=4,<5
+jupyter-collaboration>=3,<4
 mercantile>=1.2
 pillow>=10
 pydantic>=2.4.2,<3
