--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,6 +1,7 @@
 # minimum needed to build jupytergis.
 datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
+jupyter-collaboration>=3,<4
 jupyterlab>=4,<5
 mercantile>=1.2
 pillow>=10
