--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,13 @@ jobs:
             mercantile
             xyzservices
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-${{ matrix.python-version }}-linux-x86_64-gnu"
+
       - name: Setup pip cache
         uses: actions/cache@v4
         with:
@@ -58,8 +65,8 @@ jobs:
           set -eux
           yarn install
           yarn dev
-          jupyter labextension list 2>&1 | grep -ie "jupytergis-core.*OK"
-          jupyter labextension list 2>&1 | grep -ie "jupytergis-lab.*OK"
+          uv run jupyter labextension list 2>&1 | grep -ie "jupytergis-core.*OK"
+          uv run jupyter labextension list 2>&1 | grep -ie "jupytergis-lab.*OK"
 
       - name: Package the extension
         shell: bash -l {0}
@@ -82,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.12']
+        python-version: [ '3.10', '3.12' ]
 
     steps:
       - name: Install Conda environment with Micromamba
@@ -98,21 +105,43 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-${{ matrix.python-version }}-linux-x86_64-gnu"
+
+      - name: Lock and Sync
+        shell: bash -l {0}
+        run: |
+          set -eux
+          uv lock
+          uv sync --all-groups
+
+      - name: Sync test dependencies
+        shell: bash -l {0}
+        run: |
+          set -eux
+          uv sync --group test
+
       - name: Install
         shell: bash -l {0}
-        run: python scripts/dev-install.py
-
-      - name: Install test packages
-        shell: bash -l {0}
-        run: pip install pytest dirty-equals
+        run: |
+          set -eux
+          uv run python scripts/dev-install.py
 
       - name: Run tests
         shell: bash -l {0}
-        run: pytest --color=yes -v python/jupytergis_qgis/jupytergis_qgis/tests
+        run: |
+          set -eux
+          uv run pytest --color=yes -v python/jupytergis_qgis/jupytergis_qgis/tests
 
       - name: Run Python API tests
         shell: bash -l {0}
-        run: pytest --color=yes -v python/jupytergis_lab/
+        run: |
+          set -eux
+          uv run pytest --color=yes -v python/jupytergis_lab/
 
   test_isolated:
     needs: build
@@ -123,6 +152,20 @@ jobs:
         with:
           name: extension-artifacts-3.12
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-3.12.8-linux-x86_64-gnu"
+
+      - name: Lock and Sync
+        shell: bash -l {0}
+        run: |
+          set -eux
+          uv lock
+          uv sync --all-groups
+
       - name: Install and Test
         shell: bash -l {0}
         run: |
@@ -132,10 +175,10 @@ jobs:
           sudo rm -rf $(which node)
 
           cp ./jupytergis_core/dist/jupytergis*.whl ./jupytergis_lab/dist/jupytergis*.whl ./jupytergis_qgis/dist/jupytergis*.whl .
-          python -m pip install jupytergis*.whl
+          uv run python -m pip install jupytergis*.whl
 
-          jupyter labextension list
-          jupyter labextension list 2>&1 | grep -ie "jupytergis.*OK"
+          uv run jupyter labextension list
+          uv run jupyter labextension list 2>&1 | grep -ie "jupytergis.*OK"
           # jupyterlab.browser_check will fail due to the core extension jupyterlab_pygments.
           # It does not support lab v4.0.0
           #python -m jupyterlab.browser_check --no-chrome-test
@@ -163,24 +206,40 @@ jobs:
             ipywidgets
             qgis
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-3.12-linux-x86_64-gnu"
+
       - name: Download extension package
         uses: actions/download-artifact@v4
         with:
           name: extension-artifacts-3.12
+
+      - name: Lock and Sync
+        shell: bash -l {0}
+        run: |
+          set -eux
+          uv lock
+          uv sync --all-groups
 
       - name: Install the extension
         shell: bash -l {0}
         run: |
           set -eux
           cp ./jupytergis_core/dist/jupytergis*.whl ./jupytergis_lab/dist/jupytergis*.whl ./jupytergis_qgis/dist/jupytergis*.whl .
-          python -m pip install jupytergis*.whl "jupyter-collaboration>=3,<4"
+          uv run python -m pip install jupytergis*.whl "jupyter-collaboration>=3,<4"
 
       - name: Install dependencies
         shell: bash -l {0}
         working-directory: ui-tests
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-        run: jlpm install
+        run: |
+          set -eux
+          uv run jlpm install
 
       - name: Set up browser cache
         uses: actions/cache@v4
@@ -233,12 +292,20 @@ jobs:
             jupyterlab=4
             yarn=3
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-3.12.8-linux-x86_64-gnu"
+
       - name: Lint
         shell: bash -l {0}
         run: |
-          jlpm install
-          jlpm run eslint:check
-          jlpm run prettier:check
+          set -eux
+          uv run jlpm install
+          uv run jlpm run eslint:check
+          uv run jlpm run prettier:check
 
   check_links:
     name: Check Links
@@ -281,12 +348,27 @@ jobs:
         with:
           name: extension-artifacts-3.12
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.5.20"
+          enable-cache: true
+          python-version: "cpython-3.10.16-linux-x86_64-gnu"
+
+      - name: Lock and Sync
+        shell: bash -l {0}
+        run: |
+          set -eux
+          uv lock
+          uv sync --all-groups
+
       - name: Install the extension
         shell: bash -l {0}
         run: |
           set -eux
-          cp ./jupytergis_core/dist/jupytergis*.whl ./jupytergis_lab/dist/jupytergis*.whl ./jupytergis_qgis/dist/jupytergis*.whl .
-          python -m pip install jupytergis*.whl
+          uv run python -m pip install jupytergis_core/dist/jupytergis*.whl
+          uv run python -m pip install jupytergis_lab/dist/jupytergis*.whl
+          uv run python -m pip install jupytergis_qgis/dist/jupytergis*.whl
 
       - name: Build the docs site
         shell: bash -l {0}
