Fix Lite Deployment Badge via RTF on PR
---------

Co-authored-by: Matt Fisher <3608264+mfisher87@users.noreply.github.com>

--- a/.github/workflows/pr-rtd-link.yml
+++ b/.github/workflows/pr-rtd-link.yml
@@ -16,10 +16,10 @@ jobs:
   autolink-rtd-previews:
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: 'readthedocs/actions/preview@v1'
+      - uses: 'mfisher87/readthedocs-actions/preview@main'
         with:
           project-slug: 'jupytergis'
           message-template: |
             ---
             📚 Documentation preview: {docs-pr-index-url}
-            💡 JupyterLite preview is available from the doc, by clicking on ![lite badge](https://jupyterlite.rtfd.io/en/latest/_static/badge.svg)
+            💡 JupyterLite preview is available from the doc, by clicking on [![lite badge](https://jupyterlite.rtfd.io/en/latest/_static/badge.svg)]({docs-pr-index-url}/lite)
