Bot: Missing collaboration package

--- a/.github/workflows/update_galata_references.yaml
+++ b/.github/workflows/update_galata_references.yaml
@@ -85,6 +85,7 @@ jobs:
           create-args: >-
             python=3.10
             jupyterlab=4
+            jupyter-collaboration
 
       - name: Install the extension
         shell: bash -l {0}
