Install myst-parser via pip

--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -17,3 +17,7 @@ dependencies:
   - myst_parser
 
   - xeus-python # TODO: Do we need this?
+
+  # Install myst-parser via pip
+  - pip:
+      - myst-parser
