--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -16,3 +16,7 @@ dependencies:
   - sphinx-autodoc-typehints
 
   - xeus-python # TODO: Do we need this?
+
+  # Install myst-parser via pip
+  - pip:
+      - myst-parser<4.0.0
