--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -14,6 +14,7 @@ dependencies:
   - sphinx-tabs
   - pydata-sphinx-theme
   - sphinx-autodoc-typehints
+  - sphinx_exercise
 
   - xeus-python # TODO: Do we need this?
 
