fix typo in env for docs

--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -14,7 +14,7 @@ dependencies:
   - sphinx-tabs
   - pydata-sphinx-theme
   - sphinx-autodoc-typehints
-  - sphinx_exercise
+  - sphinx-exercise
 
   - xeus-python # TODO: Do we need this?
 
