--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -275,6 +275,7 @@ jobs:
             sphinx-tabs
             pydata-sphinx-theme
             sphinx-autodoc-typehints
+            sphinx-exercise
             myst-parser<4.0.0
 
       - name: Download extension package
