--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -14,6 +14,8 @@ dependencies:
   - sphinx-tabs
   - pydata-sphinx-theme
   - sphinx-autodoc-typehints
+  - sphinx-exercise
+  - sphinx-togglebutton
 
   - xeus-python # TODO: Do we need this?
 
