--- a/python/jupytergis_lab/package.json
+++ b/python/jupytergis_lab/package.json
@@ -58,6 +58,7 @@
     "@jupyterlab/application": "^4.3.0",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/completer": "^4.3.0",
+    "@jupyterlab/coreutils": "^6.3.0",
     "@jupyterlab/mainmenu": "^4.3.0",
     "@jupyterlab/services": "^7.3.0",
     "@jupyterlab/statedb": "^4.3.0",
