Use the notebook or console path as temporary project path, when using the API without file

--- a/python/jupytergis_lab/package.json
+++ b/python/jupytergis_lab/package.json
@@ -58,8 +58,10 @@
     "@jupyterlab/application": "^4.3.0",
     "@jupyterlab/apputils": "^4.3.0",
     "@jupyterlab/completer": "^4.3.0",
+    "@jupyterlab/console": "^4.3.0",
     "@jupyterlab/coreutils": "^6.3.0",
     "@jupyterlab/mainmenu": "^4.3.0",
+    "@jupyterlab/notebook": "^4.3.0",
     "@jupyterlab/services": "^7.3.0",
     "@jupyterlab/statedb": "^4.3.0",
     "@jupyterlab/translation": "^4.3.0",
