--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -3,12 +3,12 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.12
+  - python=3.13
   - pip # Needed to install jupytergis wheels in RTD build
 
   # Build docs & JupyterLite
-  - jupyterlite-core>=0.4.0,<0.6.0
-  - jupyterlite-xeus>=2,<3
+  - jupyterlite-core
+  - jupyterlite-xeus>=3.1.3,<4
   - jupyterlite-sphinx
   - sphinx
   - sphinx-tabs
