--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,12 +1,12 @@
 version: 2
 
 build:
-  os: "ubuntu-20.04"
+  os: "ubuntu-24.04"
   tools:
     python: "mambaforge-4.10"
 
 conda:
-  environment: docs/build-environment.yml
+  environment: docs/environment-docs.yml
 
 sphinx:
   configuration: docs/conf.py
