--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,6 +20,8 @@ build:
     # Override the create_environment step (undocumented feature) to create
     # multiple environments.
     create_environment:
+      # Pin micromamba
+      - /bin/bash --login -c "micromamba self-update --version 2.0.5"
       # Create the env for building the docs
       - /bin/bash --login -c "micromamba env create -n jupytergis-docs -f docs/environment-docs.yml"
       # Create the isolated env for building JupyterGIS
