--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -13,6 +13,6 @@ dependencies:
   - pydantic>=2,<3
   - pip:
       - yjs-widgets>=0.4,<0.5
-      - my-jupyter-shared-drive==0.1.13
+      - my-jupyter-shared-drive
       - ../python/jupytergis_lab
       - ../python/jupytergis_core
