--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -7,8 +7,8 @@ dependencies:
   - pip # Needed to install jupytergis wheels in RTD build
 
   # Build docs & JupyterLite
-  - jupyterlite-core>=0.4.0,<0.6.0
-  - jupyterlite-xeus>=2,<3
+  - jupyterlite-core
+  - jupyterlite-xeus>=3.1.3,<4
   - jupyterlite-sphinx
   - sphinx
   - sphinx-tabs
@@ -16,9 +16,5 @@ dependencies:
   - sphinx-autodoc-typehints
   - sphinx-exercise
   - sphinx-togglebutton
-
+  - myst-parser
   - xeus-python # TODO: Do we need this?
-
-  # Install myst-parser via pip
-  - pip:
-      - myst-parser<4.0.0
