Add jupytergis-lite metapackage

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -16,3 +16,4 @@ dependencies:
       - my-jupyter-shared-drive
       - ../python/jupytergis_lab
       - ../python/jupytergis_core
+      - ../python/jupytergis_lite
