--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "hatchling.build"
-requires = ["hatchling>=1.5.0,<2"]
+requires = ["hatchling>=1.5.0,<2", "tomlkit>=0.13.2,<0.14"]
 
 [project]
 classifiers = [
