--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
             python/jupytergis/dist/jupytergis*
             python/jupytergis_core/dist/jupytergis*
             python/jupytergis_lab/dist/jupytergis*
+            python/jupytergis_qgis/dist/jupytergis*
             python/jupytergis_lite/dist/jupytergis*
           if-no-files-found: error
 
@@ -277,6 +278,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: extension-artifacts
+
+      - name: debug
+        run: ls
 
       - name: Install the extension
         shell: bash -l {0}
