try jlpm install

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -286,7 +286,12 @@ jobs:
         shell: bash -l {0}
         run: |
           set -eux
-          cp ./jupytergis_core/dist/jupytergis*.whl ./jupytergis_lab/dist/jupytergis*.whl ./jupytergis_qgis/dist/jupytergis*.whl ./jupytergis_lite/dist/jupytergis*.whl ./jupytergis/dist/jupytergis*.whl .
+          cp ./jupytergis_core/dist/jupytergis*.whl jupytergis_core-0.0.1-py3-none-any.whl
+          cp ./jupytergis_lab/dist/jupytergis*.whl jupytergis_lab-0.0.1-py3-none-any.whl
+          cp ./jupytergis_qgis/dist/jupytergis*.whl jupytergis_qgis-0.0.1-py3-none-any.whl
+          cp ./jupytergis_lite/dist/jupytergis*.whl jupytergis_lite-0.0.1-py3-none-any.whl
+          cp ./jupytergis/dist/jupytergis*.whl jupytergis-0.0.1-py3-none-any.whl
+
           python -m pip install jupytergis*.whl
 
       - name: Build JupyterLite
@@ -295,6 +300,7 @@ jobs:
         run: |
           set -eux
           mkdir -p content
+          jlpm install
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload Lite artifacts
