--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -14,6 +14,6 @@ dependencies:
   - pip:
       - yjs-widgets>=0.4,<0.5
       - my-jupyter-shared-drive
-      - ../python/jupytergis_lab
-      - ../python/jupytergis_core
-      - ../python/jupytergis_lite
+      - ../jupytergis_lab-0.0.1-py3-none-any.whl
+      - ../jupytergis_core-0.0.1-py3-none-any.whl
+      - ../jupytergis_lite-0.0.1-py3-none-any.whl
