--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -304,7 +304,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: lite-artifacts
-          path: ./docs/dist
+          path: ./lite/dist
           retention-days: 30
 
   integration-tests-lite:
