Use `dist/` while using lite-artifacts

--- a/.github/workflows/update_lite_galata_references.yaml
+++ b/.github/workflows/update_lite_galata_references.yaml
@@ -76,6 +76,7 @@ jobs:
           workflow: 'build.yml'
           workflow_conclusion: ''
           name: lite-artifacts
+          path: dist
           allow_forks: true
 
       - name: Install dependencies
