try fixing artifacts path

--- a/python/jupytergis_lab/pyproject.toml
+++ b/python/jupytergis_lab/pyproject.toml
@@ -44,7 +44,7 @@ source = "nodejs"
 fields = ["description", "authors", "urls"]
 
 [tool.hatch.build.targets.sdist]
-artifacts = ["jupytergis_lab/labextension", "/jupytergis_lab/notebook/objects/_schema/*.py"]
+artifacts = ["jupytergis_lab/labextension", "/jupytergis_lab/notebook/objects/_schema/**/*.py"]
 exclude = [".github", "binder", "node_modules"]
 
 [tool.hatch.build.targets.wheel]
