--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -4,9 +4,5 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "include": [
-    "src/**/*",
-    "src/schema/**/*.json",
-    "src/_interface/*.json"
-  ]
+  "include": ["src/**/*", "src/schema/**/*.json", "src/_interface/*.json"]
 }
