Try build _then_ build:packages
This actually worked locally :pray:

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -36,6 +36,7 @@ build:
     # then install the wheels into the docs environment.
     pre_build:
       - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm install"
+      - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build"
       - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build:packages"
       - |-
         /bin/bash --login -c "micromamba run -n jupytergis-docs \
