Fix API doc build (#556)
* Error on doc build warnings

* Add missing maxdepth parameter value

* Restore docs build steps which installed jupytergis wheels

Unclear why removed in https://github.com/geojupyter/jupytergis/pull/412

* Remove pip install from build_packages.py

Setting up the environment should probably be decoupled from the build
helper script.

* Try build _then_ build:packages

This actually worked locally :pray:

* Fix type annotation errors

* Fix docutils warning

```
/home/docs/micromamba/envs/jupytergis-docs/lib/python3.12/site-packages/jupytergis_lab/notebook/gis_document.py:docstring of jupytergis_lab.notebook.gis_document.GISDocument:5: WARNING: Field list ends without a blank line; unexpected unindent. [docutils]
```

* Remove undefined `_type_` type

* Fix some broken type documentation

* Bugfix: Remove mutable default arguments

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -37,10 +37,17 @@ build:
     pre_build:
       - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm install"
       - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build"
+      - /bin/bash --login -c "micromamba run -n jupytergis-build jlpm build:packages"
+      - |-
+        /bin/bash --login -c "micromamba run -n jupytergis-docs \
+          python -m pip install \
+          $(ls ./python/jupytergis_core/dist/jupytergis*.whl) \
+          $(ls ./python/jupytergis_lab/dist/jupytergis*.whl) \
+          $(ls ./python/jupytergis_qgis/dist/jupytergis*.whl)"
 
     build:
       html:
         - |-
           /bin/bash --login -c "cd docs && micromamba run -n jupytergis-docs \
-          python -m sphinx -T -b html -d _build/doctrees -D language=en . \
+          python -m sphinx --fail-on-warning --keep-going --nitpicky --show-traceback --builder html --doctree-dir _build/doctrees --define language=en . \
           $READTHEDOCS_OUTPUT/html"
